@@ -580,9 +580,9 @@
           <a class="btn" href="cmd://link?https://www.dropbox.com/"><span class="fa fa-info"></span></a>
           <a class="btn" href="cmd://link?https://play.google.com/store/apps/details?id=com.dropbox.android&hl=en"><span class="fa fa-android"></span></a>
           <a class="btn" href="cmd://link?https://itunes.apple.com/us/app/dropbox/id327630330?mt=8"><span class="fa fa-apple"></span></a>
-          <a class="dropbox-install btn btn-success" href="cmd://apt-install?dropbox"><span class="fa fa-download"></span>&nbsp; Install</a>
-          <a class="dropbox-reinstall btn" href="cmd://apt-install?dropbox"><span class="fa fa-refresh"></span>&nbsp; Reinstall</a>
-          <a class="dropbox-remove btn btn-danger" href="cmd://apt-remove?dropbox"><span class="fa fa-trash"></span>&nbsp; Remove</a>
+          <a class="caja-dropbox-install btn btn-success" href="cmd://apt-install?caja-dropbox"><span class="fa fa-download"></span>&nbsp; Install</a>
+          <a class="caja-dropbox-reinstall btn" href="cmd://apt-install?caja-dropbox"><span class="fa fa-refresh"></span>&nbsp; Reinstall</a>
+          <a class="caja-dropbox-remove btn btn-danger" href="cmd://apt-remove?caja-dropbox"><span class="fa fa-trash"></span>&nbsp; Remove</a>
           </p>
           <hr class="soften" />
           </div>
