@@ -339,10 +339,6 @@ def process_packages(packages, action):
         subprocess.call(['pkexec', '/usr/lib/ubuntu-mate/ubuntu-mate-welcome-repository-installer', 'appgrid', action])
         transaction.update_cache = True
         transaction.source_to_update = 'appgrid-ubuntu-stable-'+codename+'.list'
-    elif 'dropbox' in packages:
-        subprocess.call(['pkexec', '/usr/lib/ubuntu-mate/ubuntu-mate-welcome-repository-installer', 'dropbox', action])
-        transaction.update_cache = True
-        transaction.source_to_update = 'dropbox.list'
     elif 'eviacam' in packages:
         subprocess.call(['pkexec', '/usr/lib/ubuntu-mate/ubuntu-mate-welcome-repository-installer', 'eviacam', action])
         transaction.update_cache = True
@@ -668,8 +664,8 @@ class AppView(WebKit.WebView):
         # Change button states for Software.html
         # TODO - Read this from YAML or JSON
         for package in ['0ad', 'appgrid', 'asunder',
-        'audacity', 'bleachbit', 'blender', 'bzr', 'calibre',
-        'chromium-browser', 'darktable', 'dia-gnome', 'dropbox', 'eviacam',
+        'audacity', 'bleachbit', 'blender', 'bzr', 'caja-dropbox',
+        'calibre', 'chromium-browser', 'darktable', 'dia-gnome', 'eviacam',
         'filezilla', 'firefox', 'flashplugin-installer', 'geany', 'gimp',
         'git', 'glabels', 'gnome-disk-utility', 'gnome-schedule', 'gnote',
         'gnucash', 'gramps', 'google-chrome-stable', 'google-earth-stable',
