@@ -18,6 +18,7 @@ ubuntu-mate-welcome (16.04.1~xenial1.1) xenial; urgency=medium
   * Added miscellaneous tasks to update cache, fix an incomplete install
   and fix broken dependencies.
   * Added 0 A.D, Bazaar, Dia, Git and Stellarium.
+  * Updated Dropbox.
   * Installing Adobe Flash now uses flashplugin-installer.
   * Update PPAs for Veracrypt and X2Go.
 
